2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/lisp3.test: Fix typo.

2008-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/mans.am (install-man%SECTION%): Prefer generated manpages
	over distributed ones.
	Report and patch by Peter Breitenlohner.
	* tests/man3.test: New test.
	* tests/Makefile.am: Update.

2008-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac, NEWS: Bump version to 1.10.1a.

2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac, NEWS: Bump version to 1.10.1.  Update.
	* doc/automake.texi (Releases): Update for 1.10.1.
	* Makefile.am (git-diff): Adjust for git syntax.

2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* COPYING: Revert license to GPLv2+.  All uses changed.

	* lib/config-ml.in: Sync from upstream.
	* tests/multlib.test: Add `pwd` to $PATH instead of absolute
	references to mycc.

2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/tar.test: Skip if no appropriate tar was found.

2008-01-19  NightStrike  <nightstrike@gmail.com>

	* doc/automake.texi (Dependency Tracking): Fix typo.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/config.guess, lib/config.sub: Sync from upstream.

	* Makefile.am (WGET_SV_CVS): Renamed from WGETSGO.
	(WGET_SV_GIT_AC, WGET_SV_GIT_GL, WGET_GCC): New.
	(fetch): Update to match current upstream locations.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/gnupload: Revert last change.  Add pointer to upload
	instructions of the GNU Maintenance Instructions.
	Suggestion by Karl Berry.

	* lib/gnupload: Add missing 'gnu' to example URL.
	Report by Karl Berry.

	* lib/gnupload: Fix shell portability issues with for loops.
	Report by Karl Berry.

2008-01-19  Jim Meyering  <meyering@redhat.com>

	* lib/gnupload (GPG): Don't use an absolute path.
	This reverts part of the 2004-01-28 change.

2008-01-19  Akim Demaille  <akim@lrde.epita.fr>

	* bootstrap: Fix typos on redirections.
