@@ -290,6 +290,7 @@ Tamara L. Dahlgren	dahlgren1@llnl.gov
 Tatu Ylonen		ylo@ssh.fi
 Teun Burgers		burgers@ecn.nl
 The Crimson Binome	steve@nyongwa.montreal.qc.ca
+Theodoros V. Kalamatianos thkala@gmail.com
 Thien-Thi Nguyen	ttn@glug.org
 Thomas Fitzsimmons	fitzsim@redhat.com
 Thomas Gagne		tgagne@ix.netcom.com
