@@ -1,3 +1,11 @@
+2008-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/instsh2.test: Split off testing of `install-sh -C' ...
+	* tests/instsh3.test: ... to this new test, requiring non-root.
+	* tests/Makefile.am: Adjust.
+	* THANKS: Update.
+	Report by Theodoros V. Kalamatianos.
+
 2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/lisp3.test: Fix typo.
